--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL= 'https://apis.iamyourstory.in/'
-REACT_APP_API_URLL = 'http://localhost:4000/'
+REACT_APP_API_URLl= 'https://apis.iamyourstory.in/'
+REACT_APP_API_URL = 'http://localhost:4000/'
